--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,3 +1,9 @@
+.nav__container {
+  top: 0;
+  position: sticky;
+  z-index: 999;
+}
+
 .nav {
   background-color: var(--beige);
   text-decoration: none;
