--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,23 +3,26 @@
   justify-content: flex-end;
   position: relative;
   margin: 0px;
-  min-width: 100%;
-  height: 100vh;
+  width: 100vw;
+  height: 95vh;
   background-color: var(--beige);
-  /* background: url("../assets/paintings/hero.jpg") no-repeat;
-  background-size: cover;
-  background-position: 50% 30%; */
 }
 
 .hero img {
-  width: 500px;
+  position: absolute;
+  width: 40%;
   height: 100%;
+  z-index: 0;
+  left: 50%;
 }
 
 .hero h2 {
   position: absolute;
   display: flex;
   margin: 0;
-  left: 10%;
-  top: 50%;
+  left: 20%;
+  top: 40%;
+  font-family: "Tenor Sans", sans-serif;
+  font-size: 100px;
+  color: white;
 }
