--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,5 +1,8 @@
 .home {
   width: 100%;
+  flex-direction: column;
+  display: flex;
+  height: 100%;
 }
 
 .hero {
@@ -38,4 +41,15 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+
+.collections__wrapper {
+  padding: 40px 0 40px 0;
+  width: 100%;
+  display: flex;
+  background-color: white;
+  padding: 40px 0 40px 0;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
