--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -8,6 +8,10 @@
   background-color: var(--beige);
   text-decoration: none;
 }
+.nav__teal {
+  background-color: var(--teal);
+  text-decoration: none;
+}
 
 .nav_list {
   padding: 0px 8px 0px 8px;
@@ -39,6 +43,7 @@
 
 .nav_list a {
   color: white;
+  cursor: pointer;
 }
 
 .logo {
