--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -33,6 +33,24 @@
   cursor: pointer;
 }
 
+.arrow_down {
+  fill: white;
+  stroke: white;
+}
+
+.main_nav span:hover {
+  color: var(--teal);
+}
+
+.main_nav span:hover .arrow_down {
+  fill: var(--teal);
+  stroke: var(--teal);
+}
+
+.main_nav a:hover {
+  color: var(--teal);
+}
+
 .dropdown_container {
   position: absolute;
 }
@@ -51,4 +69,37 @@
   height: 70px;
   object-fit: contain;
   cursor: pointer;
+}
+
+/* Alternative styling */
+
+.main_nav_alt {
+  display: flex;
+  gap: 20px;
+  margin-right: 40px;
+}
+.main_nav_alt span {
+  font-size: 24px;
+  margin: 0;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.arrow_down {
+  fill: white;
+  stroke: white;
+}
+
+.main_nav_alt span:hover {
+  color: var(--beige);
+}
+
+.main_nav_alt span:hover .arrow_down {
+  fill: var(--beige);
+  stroke: var(--beige);
+}
+
+.main_nav_alt a:hover {
+  color: var(--beige);
 }
