--- a/src/components/Paintings.module.css
+++ b/src/components/Paintings.module.css
@@ -6,14 +6,37 @@
 }
 
 .card__container {
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
 }
 
 .card__container img {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 500px;
+  margin-bottom: 30px;
+  object-fit: contain;
+}
+
+.info__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--teal);
+  width: 100%;
+  height: 100%;
+}
+
+.card__title {
+  font-size: 24px !important;
+}
+
+.size {
+  display: flex;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
 }
