--- a/src/components/Contacts.module.css
+++ b/src/components/Contacts.module.css
@@ -1,4 +1,5 @@
-.contacts__container {
+.contacts__container,
+.contacts__container__alt {
   padding: 40px 0 40px 0;
   width: 100%;
   display: flex;
@@ -8,12 +9,14 @@
   align-items: center;
   height: 100%;
 }
-.contacts__container h2 {
+.contacts__container h2,
+.contacts__container__alt h2 {
   color: var(--teal);
   font-size: 60px;
 }
 
-.contacts__container hr {
+.contacts__container hr,
+.contacts__container__alt hr {
   width: 50px;
   color: var(--teal);
   padding: 1px;
@@ -35,17 +38,22 @@
   width: 50%;
 }
 
-.contacts__info__container {
+.contacts__info__container,
+.contacts__info__container__alt {
   width: 90%;
   min-height: 300px;
   display: flex;
   border: 2px solid var(--teal);
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.contacts__info__container p {
+.contacts__info__container p,
+.contacts__info__container__alt p {
   width: 90%;
+  margin: 0;
   font-size: 24px;
   font-weight: 100;
   font-family: "Antic", sans-serif;
@@ -57,14 +65,16 @@
   width: 50%;
 }
 
-.links__container {
+.links__container,
+.links__container__alt {
   display: flex;
   flex-direction: column;
   width: 90%;
   margin-left: 30px;
 }
 
-.links__container a {
+.links__container a,
+.links__container__alt a {
   display: flex;
   align-items: center;
   gap: 20px;
@@ -73,70 +83,33 @@
   white-space: nowrap;
 }
 
-.links__container a > svg {
+.links__container a > svg,
+.links__container__alt a > svg {
   font-size: 60px;
 }
 
 /* Alaternative styling */
 
 .contacts__container__alt {
-  padding: 40px 0 40px 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
   background-color: var(--teal);
-  justify-content: center;
-  align-items: center;
-  height: 100%;
 }
 .contacts__container__alt h2 {
   color: white;
-  font-size: 60px;
 }
 
 .contacts__container__alt hr {
-  width: 50px;
   color: white;
-  padding: 1px;
   background-color: white;
-  border-radius: 10px;
 }
 
 .contacts__info__container__alt {
-  width: 90%;
-  min-height: 300px;
-  display: flex;
   border: 2px solid white;
-  justify-content: center;
-  align-items: center;
 }
 
 .contacts__info__container__alt p {
-  width: 90%;
-  font-size: 24px;
-  font-weight: 100;
-  font-family: "Antic", sans-serif;
-  text-align: center;
-  overflow: hidden;
   color: white;
-}
-
-.links__container__alt {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  margin-left: 30px;
 }
 
 .links__container__alt a {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin: 15px 0;
   color: white;
-  white-space: nowrap;
-}
-
-.links__container__alt a > svg {
-  font-size: 60px;
 }
