--- a/src/components/Dropdown.module.css
+++ b/src/components/Dropdown.module.css
@@ -1,7 +1,19 @@
 .dropdown {
-  border: 1px solid black;
   overflow: hidden;
   position: relative;
   text-align: center;
   z-index: 100;
+}
+
+.dropdown a {
+  color: var(--teal);
+}
+
+.dropdown li:hover {
+  background-color: var(--teal);
+}
+
+.dropdown li:hover a {
+  display: block;
+  color: white;
 }
