--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ font-family: 'Tenor Sans', sans-serif;  Hero text */
   background-color: white;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   height: 100%;
   margin: 0;
