--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -52,3 +52,61 @@
   align-items: center;
   flex-direction: column;
 }
+
+/* Media Queries */
+
+/* Tablets */
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .hero {
+    height: 85vh;
+  }
+
+  .hero img {
+    min-width: 50%;
+  }
+
+  .hero h2 {
+    font-size: 70px;
+  }
+}
+
+/* Typical Mobile */
+
+@media only screen and (min-width: 320px) and (max-width: 479px) {
+  .hero {
+    height: 92vh;
+  }
+
+  .hero h2 {
+    font-size: 32px;
+    left: 10%;
+  }
+
+  .hero img {
+    min-width: 100%;
+    left: 0%;
+  }
+}
+
+/* Mobile Landscape */
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .hero {
+    height: 75vh;
+  }
+  .hero h2 {
+    font-size: 42px;
+  }
+  .hero img {
+    min-width: 50%;
+    object-fit: contain;
+  }
+}
+
+/* Small desktop */
+
+@media only screen and (min-width: 980px) and (max-width: 1024px) {
+  .hero h2 {
+    font-size: 60px;
+  }
+}
