--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -32,7 +32,66 @@
 }
 .about_me p {
   width: 90%;
-  font-size: 33px;
+  font-size: 24px;
   font-weight: 100;
   word-wrap: break-word;
+  margin: 12px 0;
+}
+
+/* Media Queries */
+
+/* Tablets */
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .about_me {
+    height: fit-content;
+  }
+}
+
+/* Typical Mobile */
+
+@media only screen and (min-width: 320px) and (max-width: 479px) {
+  .about_me {
+    height: auto;
+  }
+
+  .about_me h3 {
+    font-size: 2rem;
+    padding: 0 10px;
+  }
+
+  .about_me hr {
+    margin: 0 0 30px 0;
+  }
+
+  .about_me p {
+    margin: 0;
+    font-size: 1.1rem;
+    padding-bottom: 12px;
+    font-weight: 200;
+  }
+}
+
+/* Mobile Landscape */
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .about_me {
+    height: fit-content;
+  }
+
+  .about_me h3 {
+    font-size: 40px;
+  }
+
+  .about_me p {
+    font-size: 20px;
+  }
+}
+
+/* Small desktop */
+
+@media only screen and (min-width: 980px) and (max-width: 1024px) {
+  .about_me p {
+    margin: 0;
+    padding: 10px 0;
+  }
 }
