--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -93,10 +93,10 @@
     left: 0%;
   }
   .about__wrapper {
-    padding: 40px 0 0 0;
+    padding: 0;
   }
   .collections__wrapper {
-    padding: 0 0 40px 0;
+    padding: 0;
   }
 }
 
