--- a/src/pages/Collection.module.css
+++ b/src/pages/Collection.module.css
@@ -53,3 +53,57 @@
   text-align: center;
   inline-size: 70%;
 }
+
+/* Media Queries */
+
+/* Tablets */
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .content__container h2 {
+    font-size: 40px;
+  }
+
+  .content__container hr {
+    width: 30px;
+  }
+
+  .normal__text,
+  .center__text {
+    font-size: 18px;
+  }
+
+  .normal__text {
+    margin: 10px 0 0 0;
+  }
+}
+
+/* Typical Mobile */
+
+@media only screen and (min-width: 320px) and (max-width: 479px) {
+  .content__container h2 {
+    font-size: 2rem;
+  }
+
+  .content__container hr {
+    width: 30px;
+    padding: 0;
+  }
+
+  .normal__text,
+  .center__text {
+    font-size: 1.1rem;
+  }
+
+  .normal__text {
+    margin: 10px 0 0 0;
+  }
+}
+
+/* Mobile Landscape */
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+}
+
+/* Small desktop */
+
+@media only screen and (min-width: 980px) and (max-width: 1024px) {
+}
