fixing the burger menu so it closes on clickaway,getting to build it for production

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -61,6 +61,7 @@
 
   .about_me hr {
     margin: 0 0 30px 0;
+    width: 10%;
   }
 
   .about_me p {
@@ -80,6 +81,10 @@
 
   .about_me h3 {
     font-size: 40px;
+  }
+
+  .about_me hr {
+    width: 10%;
   }
 
   .about_me p {
