--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -10,8 +10,8 @@
   justify-content: flex-end;
   position: relative;
   margin: 0px;
-  width: 100vw;
-  height: 95vh;
+  width: 100%;
+  height: 95dvh;
   background-color: var(--beige);
 }
 
